# semiarrow

./: CHANGELOG.md  LICENSE  README.md  flake.nix  semiarrow.cabal
src/Data/Profunctor/Product/: Extras.hs
