cabal-version:         3.0
name:                  semiarrow
version:               0.1.0.0
synopsis:              Free monoidal profunctors + semiarrows.
description:
  This package (for now) is a companion to

   1. [de Oliveira et al, 2022, /On Structuring Functional Programs with Monoidal Profunctors/](https://arxiv.org/pdf/2207.00852.pdf#page=6)
   2. [de Oliveira et al, 2023, /Programming with Monoidal Profunctors and Semiarrows/](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4496714)

  intended to fill in some of the typos or omitted pieces of implementation and
  allow the reader to work with the Haskell contained in those papers or with
  analogues defined in existing Haskell packages: the package is not a
  self-contained or self-documenting guide to the content of those papers, and
  doesn't (for now) contain more than a few basic examples. It does however,
  give you some tools to define those examples for yourself. (PRs are welcome!)

license:               MIT
license-file:          LICENSE
author:                Eric Meinhardt
maintainer:            ericmeinhardt@gmail.com
copyright:             2023
homepage:              https://github.com/emeinhardt/semiarrow
bug-reports:           https://github.com/emeinhardt/semiarrow/issues
category:              Data
build-type:            Simple
extra-doc-files:       CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/emeinhardt/semiarrow/semiarrow.git

common warnings
  ghc-options:
    -Wall -Wdefault -Wno-orphans -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat

library
  import:              warnings
  default-language:    GHC2021
  default-extensions:  UnicodeSyntax
  other-extensions:
    NoImplicitPrelude
    DerivingStrategies
    FunctionalDependencies
    ExplicitNamespaces
  hs-source-dirs:      src
  exposed-modules:
    Data.Profunctor.Product.Extras
  build-depends:
      base                 >= 4.17.2.1 && <5.0
    , base-unicode-symbols == 0.2.*
    , composition-prelude
    , mtl
    , semigroupoids
    , profunctors
    , product-profunctors
